# neovim-vala

./: .gitmodules  README.md  grid.vala  hacks.c  main.vala  meson.build  msgpack-rpc.vala  renderer.vala  window.vala
.github/workflows/: build-win.yml
scripts/: build-mingw.sh  build.sh  install-mingw.sh  package.sh
